HWS-566
Changes to remove reported reflection errors when running the CLI